--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Renjie Zhu's todo</title>
+    <title>Renjie Zhu's ToDoAPP</title>
 </head>
 
 <body>
