--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -8,8 +8,16 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    {% block head %}
 
+    {% endblock head %}
+
+    {% if title %}
+    <title>Renjie Zhu's Portfolio - {{title}}</title>
+    {% else %}
     <title>Renjie Zhu's Portfolio</title>
+    {% endif %}
+
 </head>
 
 <body>
@@ -39,9 +47,13 @@
     </div>
 
     <hr>
-    <p id="footer">&copy; 2020 Renjie Zhu, Icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 
-
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span class="text-muted">&copy; 2020 Renjie Zhu, Icon by <a target="_blank"
+                    href="https://icons8.com">Icons8</a></span>
+        </div>
+    </footer>
 
 </body>
 
