create experience model

--- a/portfolio/templates/portfolio/contacts.html
+++ b/portfolio/templates/portfolio/contacts.html
@@ -1,9 +1,9 @@
 {% extends 'portfolio/base.html' %}
 
-{% block div1 %}
+{% block content %}
     <div class="container">
         <h2>Contacts</h2>
 
         <li>Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
     </div>
-{% endblock div1 %}
+{% endblock content %}
