--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -1,11 +1,6 @@
 {% extends 'portfolio/base.html' %}
 
 
-{% block div1 %}
+{% block content %}
     <h2>DIV1</h2>
-{% endblock div1 %}
-
-
-{% block div2 %}
-    <h2>div2</h2>
-{% endblock div2 %}
+{% endblock content %}
