--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     {% block head %}
 
     {% endblock head %}
@@ -26,26 +27,11 @@
 
     <div>
 
-        {% block div1 %}
+        {% block content %}
 
-        {% endblock div1 %}
-
-    </div>
-    <div>
-
-        {% block div2 %}
-
-        {% endblock div2 %}
+        {% endblock content %}
 
     </div>
-    <div>
-
-        {% block div3 %}
-
-        {% endblock div3 %}
-
-    </div>
-
     <hr>
 
     <footer class="footer mt-auto py-3">
