--- a/portfolio/templates/portfolio/contacts.html
+++ b/portfolio/templates/portfolio/contacts.html
@@ -1,9 +1,12 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
-    <div class="container">
-        <h2>Contacts</h2>
+<h3 class="text-center text-uppercase">Contacts</h3>
+<div class="card">
+    <ul class="list-group group-flush">
+        <li class="list-group-item">Phone: 805-270-9509</li>
+        <li class="list-group-item">Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
+    </ul>
+</div>
 
-        <li>Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
-    </div>
 {% endblock content %}
