--- a/portfolio/templates/portfolio/contacts.html
+++ b/portfolio/templates/portfolio/contacts.html
@@ -1,11 +1,26 @@
 {% extends 'portfolio/base.html' %}
+{% load static %}
 
 {% block content %}
-<h3 class="text-center text-uppercase">Contacts</h3>
+<h3 class="text-center text-uppercase my-4">Contacts</h3>
 <div class="card">
     <ul class="list-group group-flush">
         <li class="list-group-item">Phone: 805-270-9509</li>
         <li class="list-group-item">Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
+        <li class="list-group-item">
+            <a href="http://github.com/renjiezhu">
+                <img src="{% static 'images/icons8-github-50.png' %}" alt="github" height="40px" weight="40px">
+            </a>
+            <a href="http://linkedin.com/in/renjie-zhu">
+                <img src="{% static 'images/icons8-linkedin-50.png' %}" alt="linkedin" height="40px" weight="40px">
+            </a>
+            <a href="http://instagram.com/quqiamdd">
+                <img src="{% static 'images/icons8-instagram-50.png' %}" alt="instagram" height="40px" weight="40px">
+            </a>
+            <a href="mailto:renjie.j.zhu@gmail.com">
+                <img src="{% static 'images/icons8-paper-plane-50.png' %}" alt="email" height="40px" weight="40px">
+            </a>
+        </li>
     </ul>
 </div>
 
