--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -1,16 +1,29 @@
 {% extends 'portfolio/base.html' %}
+{% load static %}
 
 
 {% block content %}
-    <div class="jumbotron">
-    <h1 class="display-4">Hello, it's Renjie Zhu.</h1>
-    <p class="lead">An introduction to myself, which I don't know how to write.</p>
-    <hr class="my-4">
-    <p class="lead">
-        <a href="{% url 'portfolio_project_page' %}" class="btn btn-primary btn-lg">My Projects</a>
-    </p>
-    <p class="lead">
-        <a href="{% url 'portfolio_contact_page' %}" class="btn btn-primary btn-lg">Contact Me</a>
-    </p>
+<div class="jumbotron jumbotron-fluid bg-dark">
+    <div class="container">
+        <h1 class="display-4 text-white">Hello, it's Renjie Zhu.</h1>
+        <p class="lead text-white">An introduction of myself, which I don't know how to write.</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a href="{% url 'portfolio_project_page' %}" class="btn btn-primary btn-lg">My Projects</a>
+            <a href="{% url 'portfolio_contact_page' %}" class="btn btn-primary btn-lg">Contact Me</a>
+        </p>
+        <a href="http://github.com/renjiezhu">
+            <img src="{% static 'images/icons8-github-50.png' %}" alt="github" height="40px" weight="40px">
+        </a>
+        <a href="http://linkedin.com/in/renjie-zhu">
+            <img src="{% static 'images/icons8-linkedin-50.png' %}" alt="linkedin" height="40px" weight="40px">
+        </a>
+        <a href="http://instagram.com/quqiamdd">
+            <img src="{% static 'images/icons8-instagram-50.png' %}" alt="instagram" height="40px" weight="40px">
+        </a>
+        <a href="mailto:renjie.j.zhu@gmail.com">
+            <img src="{% static 'images/icons8-paper-plane-50.png' %}" alt="email" height="40px" weight="40px">
+        </a>
     </div>
+</div>
 {% endblock content %}
