contact font light

--- a/portfolio/templates/portfolio/contacts.html
+++ b/portfolio/templates/portfolio/contacts.html
@@ -5,8 +5,8 @@
 <h3 class="text-center text-uppercase my-4">Contacts</h3>
 
         <ul class="list-group group-flush">
-            <li class="list-group-item bg-dark">Phone: 805-270-9509</li>
-            <li class="list-group-item bg-dark">Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
+            <li class="list-group-item bg-dark text-light">Phone: 805-270-9509</li>
+            <li class="list-group-item bg-dark text-light">Email: <a href="mailto:renjie.j.zhu@gmail.com">renjie.j.zhu@gmail.com</a></li>
             <li class="list-group-item bg-dark">
                 <a href="http://github.com/renjiezhu">
                     <img src="{% static 'images/icons8-github-50.png' %}" alt="github" height="40px" weight="40px">
